cambio index.html

--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="gl">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina principal</title>
+  <meta charset="UTF-8">
+  <title>Portal de Eventos Sostenibles</title>
+  <link rel="stylesheet" href="estilos.css">
 </head>
-<body> 
+<body>
+  <header>
+    <h1>Portal de Eventos Sostenibles</h1>
+    <nav>
+      <a href="index.html">Inicio</a>
+      <a href="eventos.html">Eventos</a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="presentacion">
+      <h2>Bienvenido al portal</h2>
+      <p>Explora conferencias, talleres y actividades ecológicas para construir un futuro más sostenible.</p>
+    </section>
+
+    <section class="carrusel">
+      <h2>Eventos Destacados</h2>
+      <div class="carrusel-contenedor">
+        <img  alt="Evento 1">
+        <img  alt="Evento 2">
+        <img  alt="Evento 3">
+      </div>
+    </section>
+  </main>
+
 </body>
 </html>
