--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portal de Eventos Sostenibles</title>
-  <link rel="stylesheet" href="css/estilo.css">
+  <link rel="stylesheet" href="/html/css/estilo.css">
 </head>
 <body>
   <header>
