cambios en todas las paginas

--- a/html/eventos.html
+++ b/html/eventos.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lista eventos</title>
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
+
 <body>
-    <h1>Prgvhkgh</h1>
+    <header class="headerEventos">
+        <img class="imgLogo" src="./images/logo_portal_eventos_sostenibles.png"
+            alt="Imagen del logo portal eventos sostenibles">
+        <h1 class="cajaListadoEventos">Listado de eventos</h1>
+        <br>
+    </header>
+    <main>
+        <div class="buscador">
+            <input type="text" placeholder="Buscar evento..." />
+        </div>
+        <div class="evento-card">
+            <h3>Recogida de basuras en la playa</h3>
+            <p><strong>Fecha:</strong> 20/06/2025</p>
+            <p><strong>Descripción:</strong> Se realizarán labores de limpieza para concienciar a la población sobre el
+                problema de los residuos en las playas.</p>
+            <a href="./detalle_evento01.html" class="boton-evento">Ver más</a>
+        </div>
+        <div class="evento-card">
+            <h3>Conferencia sobre el consumo sostenible</h3>
+            <p><strong>Fecha:</strong> 14/07/2025</p>
+            <p><strong>Descripción:</strong> Charla telemática sobre prácticas responsables de consumo.</p>
+            <a href="./detalle_evento02.html" class="boton-evento">Ver más</a>
+        </div>
+
+        <div class="evento-card">
+            <h3>Taller sobre compostaje</h3>
+            <p><strong>Fecha:</strong> 23/08/2025</p>
+            <p><strong>Descripción:</strong> Sesión práctica para aprender las claves del compostaje.</p>
+            <a href="./detalle_evento03.html" class="boton-evento">Ver más</a>
+        </div>
+
+        <div class="redes-sociales">
+            <a href="https://www.facebook.com" target="_blank" aria-label="Facebook">
+                <img src="./images/img_logo_facebook.png" alt="Facebook">
+            </a>
+            <a href="https://www.x.com" target="_blank" aria-label="X">
+                <img src="./images/img_logo_x.png" alt="Twitter">
+            </a>
+            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
+                <img src="./images/img_logo_instagram.png" alt="Instagram">
+            </a>
+            <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn">
+                <img src="./images/img_logo_linkedin.png" alt="LinkedIn">
+            </a>
+        </div>
+
+        <br><br><br><br><br>
+    </main>
+    <footer>
+        <p class="volver"><a href="./index.html">Volver</a></p>
+        <p>© 2025 Portal de Eventos Sostenibles</p>
+    </footer>
 </body>
+
 </html>
