cambios en los enlaces del logo

--- a/html/eventos.html
+++ b/html/eventos.html
@@ -10,8 +10,9 @@
 
 <body>
     <header class="headerEventos">
-        <img class="imgLogo" src="./images/logo_portal_eventos_sostenibles.png"
-            alt="Imagen del logo portal eventos sostenibles">
+        <a href="./index.html">
+            <img class="imgLogo" src="./images/logo_portal_eventos_sostenibles.png"
+                alt="Imagen del logo portal eventos sostenibles"></a>
         <h1 class="cajaListadoEventos">Listado de eventos</h1>
         <br>
     </header>
