cambio en los enlaces para que se habran en otra página diferente

--- a/html/detalle_evento01.html
+++ b/html/detalle_evento01.html
@@ -37,7 +37,7 @@
                 </div>
                 <div id="content2" class="tab-content">
                     <h3>Ubicación</h3>
-                    <p class="estilo_detalle"><a href="https://maps.app.goo.gl/pxkaUgqw77iqr4zQ7">
+                    <p class="estilo_detalle"><a href="https://maps.app.goo.gl/pxkaUgqw77iqr4zQ7"  target="_blank">
                             Playa de Mera, Oleiros
                         </a></p>
                 </div>
