--- a/html/detalle_evento02.html
+++ b/html/detalle_evento02.html
@@ -37,7 +37,7 @@
                 </div>
                 <div id="content2" class="tab-content">
                     <h3>Ubicación</h3>
-                    <p class="estilo_detalle"><a href="https://www.twitch.tv">
+                    <p class="estilo_detalle"><a href="https://www.twitch.tv" target="_blank">
                             Portal telemático en la plataforma Twitch
                         </a></p>
                 </div>
@@ -78,7 +78,7 @@
         </div>
     </main>
     <footer>
-         <br><br><br><br><br><br>
+        <br><br><br><br><br><br>
         <p class="volver"><a href="./eventos.html">Volver</a></p>
         <p>© 2025 Portal de Eventos Sostenibles</p>
     </footer>
