--- a/html/detalle_evento03.html
+++ b/html/detalle_evento03.html
@@ -32,11 +32,12 @@
             <div class="content">
                 <div id="content1" class="tab-content">
                     <h3>Descripción</h3>
-                    <p>Sesión práctica para aprender las claves del compostaje, con trucos y aplicable en el día a día.</p>
+                    <p>Sesión práctica para aprender las claves del compostaje, con trucos y aplicable en el día a día.
+                    </p>
                 </div>
                 <div id="content2" class="tab-content">
                     <h3>Ubicación</h3>
-                    <p class="estilo_detalle"><a href="https://maps.app.goo.gl/J3HkM7Qap9FohHai7">
+                    <p class="estilo_detalle"><a href="https://maps.app.goo.gl/J3HkM7Qap9FohHai7" target="_blank">
                             Monte Xalo, Culleredo
                         </a></p>
                 </div>
@@ -55,18 +56,15 @@
             <div class="carrusel-track" id="track">
                 <article class="evento">
 
-                    <img src="./images/img_taller_compostaje02.jpg"
-                        alt="Imágenes referentes al contenido de la charla">
+                    <img src="./images/img_taller_compostaje02.jpg" alt="Imágenes referentes al contenido de la charla">
                 </article>
                 <article class="evento">
 
 
-                    <img src="./images/img_taller_compostaje03.jpg"
-                        alt="Imágenes referentes al contenido de la charla">
+                    <img src="./images/img_taller_compostaje03.jpg" alt="Imágenes referentes al contenido de la charla">
                 </article>
                 <article class="evento">
-                    <img src="./images/img_taller_compostaje04.jpg"
-                        alt="Imágenes referentes al contenido de la charla">
+                    <img src="./images/img_taller_compostaje04.jpg" alt="Imágenes referentes al contenido de la charla">
                 </article>
             </div>
             <div class="botones">
@@ -76,7 +74,7 @@
         </div>
     </main>
     <footer>
-         <br><br><br><br><br><br>
+        <br><br><br><br><br><br>
         <p class="volver"><a href="./eventos.html">Volver</a></p>
         <p>© 2025 Portal de Eventos Sostenibles</p>
     </footer>
